// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`InventoryGuests Component should handle multiple display states, error, pending, fulfilled: error 1`] = `
<div
  className="curiosity-table-scroll"
  style={
    {
      "height": "275px",
    }
  }
>
  <div
    className="curiosity-table-scroll-list"
    onScroll={[Function]}
  >
    <ErrorMessage
      title="t(curiosity-inventory.error, {"context":"title"})"
    />
  </div>
</div>
`;

exports[`InventoryGuests Component should handle multiple display states, error, pending, fulfilled: fulfilled 1`] = `
<div
  className="curiosity-table-scroll"
  style={
    {
      "height": "275px",
    }
  }
>
  <div
    className="curiosity-table-scroll-list"
    onScroll={[Function]}
  >
    <Table
      className="curiosity-guests-list fadein__fast"
      columnHeaders={
        [
          "lorem",
          "dolor",
        ]
      }
      isBorders={false}
      isHeader={true}
      rows={
        [
          {
            "cells": [
              "ipsum",
              "sit",
            ],
          },
        ]
      }
    />
  </div>
</div>
`;

exports[`InventoryGuests Component should handle multiple display states, error, pending, fulfilled: pending 1`] = `
<div
  className="curiosity-table-scroll"
  style={
    {
      "height": "275px",
    }
  }
>
  <div
    className="curiosity-table-scroll-list__no-scroll"
    onScroll={[Function]}
  >
    <div
      className="curiosity-table-scroll-loader__custom"
    >
      <Loader
        tableProps={
          {
            "borders": false,
            "className": "curiosity-guests-list",
            "colCount": 1,
            "colWidth": [],
            "isHeader": false,
            "rowCount": 1,
            "variant": "compact",
          }
        }
        variant="table"
      />
    </div>
  </div>
</div>
`;

exports[`InventoryGuests Component should render a basic component: basic 1`] = `
<div
  className="curiosity-table-scroll"
  style={
    {
      "height": "42px",
    }
  }
>
  <div
    className="curiosity-table-scroll-list__no-scroll"
    onScroll={[Function]}
  >
    <div
      className="curiosity-table-scroll-loader__custom"
    >
      <Loader
        tableProps={
          {
            "borders": false,
            "className": "curiosity-guests-list",
            "colCount": 1,
            "colWidth": [],
            "isHeader": false,
            "rowCount": 1,
            "variant": "compact",
          }
        }
        variant="table"
      />
    </div>
  </div>
</div>
`;
